kubernetes/core/gateway-api/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gwapi
  namespace: default
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: 172.31.0.10
    parametersRef:
      group: ""
      kind: ConfigMap
      name: gwapi-gw-options
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      hostname: "*.capi-core.homelab.danmanners.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: http-cloud
      protocol: HTTP
      port: 80
      hostname: "*.cloud.danmanners.com"
      allowedRoutes:
        namespaces:
          from: All
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "*.capi-core.homelab.danmanners.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard
            kind: Secret
            group: ""
    - name: https-cloud
      protocol: HTTPS
      port: 443
      hostname: "*.cloud.danmanners.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Terminate
        certificateRefs:
          - name: wildcard
            kind: Secret
            group: ""
    - name: argocd
      protocol: TLS
      port: 443
      hostname: "argocd.cloud.danmanners.com"
      allowedRoutes:
        namespaces:
          from: All
      tls:
        mode: Passthrough
    - name: palworld-server
      protocol: UDP
      port: 8211
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/instance: palworld
              app.kubernetes.io/name: palworld
    - name: palworld-steam
      protocol: UDP
      port: 27015
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/instance: palworld
              app.kubernetes.io/name: palworld
    - name: valheim-game
      protocol: UDP
      port: 2456
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/instance: valheim
              app.kubernetes.io/name: valheim
    - name: valheim-query
      protocol: UDP
      port: 2457
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/instance: valheim
              app.kubernetes.io/name: valheim
    - name: valheim2-game
      protocol: UDP
      port: 2556
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/instance: valheim2
              app.kubernetes.io/name: valheim2
    - name: valheim2-query
      protocol: UDP
      port: 2557
      allowedRoutes:
        namespaces:
          from: Selector
          selector:
            matchLabels:
              app.kubernetes.io/instance: valheim2
              app.kubernetes.io/name: valheim2
